Tue Nov  6 15:51:01 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * examples/RTCORBA/Activity/Job.idl:
        * examples/RTCORBA/Activity/Activity.h:
        * examples/RTCORBA/Activity/POA_Holder.cpp:
        * examples/RTCORBA/Activity/POA_Holder.h:
        * examples/RTCORBA/Activity/Builder.cpp:
        * examples/RTCORBA/Activity/Activity.cpp:
        * examples/RTCORBA/Activity/run_test.pl:
          Fixed a lot of memory leaks in this example.

Mon Nov  5 16:30:00 UTC 2007  Simon Massey  <simon.massey@prismtech.com>

        * orbsvcs/orbsvcs/IFRService/ValueDef_i.cpp:

          Correct typo from causing infinate recursion when defining
          value types after forward declaring the same type.

Mon Nov  5 14:33:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * README:
          TAO is implementing a lot of the 3.x CORBA features

Mon Nov  5 12:17:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_3080/client.cpp:
        * tests/Portable_Interceptors/Bug_3080/Client_ORBInitializer.cpp:
        * tests/Portable_Interceptors/Bug_3080/Client_Request_Interceptor.cpp:
        * tests/Portable_Interceptors/Bug_3080/Client_Request_Interceptor.h:
          Improved this test

Mon Nov  5 10:26:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/MT_Cubit/client.cpp:
        * performance-tests/Cubit/TAO/MT_Cubit/client.h:
        * performance-tests/Cubit/TAO/MT_Cubit/Globals.h:
          Updated for VxWorks thread id changes

Mon Nov  5 03:05:06 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerated for PI.mpc & PI_Server.mpc changes.

        * tao/tao.mpc:

          Fix Header_Files section where Objref_VarOut_T.h and
          Object_Reference_Traits_Base_T.h were listed on the same line.
          This was interpreted as a single filename with embedded spaces